flickering button fix

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -222,10 +222,10 @@ body{
 .main{
     margin-top: 50px;
     padding: 20px;
-    background-color: #2a0f1f;
+    background-color: #6a0d50;
     background-image:
-        repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(115, 0, 81, 0.3) 2px, rgba(115, 0, 81, 0.3) 4px),
-        repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(115, 0, 81, 0.3) 2px, rgba(115, 0, 81, 0.3) 4px);
+        repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(115, 0, 81, 0.25) 2px, rgba(115, 0, 81, 0.25) 4px),
+        repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(115, 0, 81, 0.25) 2px, rgba(115, 0, 81, 0.25) 4px);
     color: #d8d8d8;
     position: relative;
 }
@@ -1306,7 +1306,7 @@ div.boardsCategoryDiv:focus h3 {
     background: rgba(0, 0, 0, 0.9);
     color: #fff;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 1000;
     display: flex;
     flex-direction: column;
@@ -1315,6 +1315,7 @@ div.boardsCategoryDiv:focus h3 {
     padding: 20px;
     box-sizing: border-box;
     animation: fadeIn 0.3s ease-out;
+    overflow-y: auto;
 }
 .closeOtherDisplayDiv{
     position: absolute;
